--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/bartleby.css">
+    <link rel="stylesheet" href="assets/photon.css">
 
     {{content-for 'head-footer'}}
   </head>
